Fix header icon and link alignment

--- a/src/styles/layout.module.css
+++ b/src/styles/layout.module.css
@@ -29,6 +29,7 @@
   font-size: 28pt;
   color: #ffffff;
   text-decoration: none;
+  margin-right: 20px;
 }
 
 .header-container {
@@ -51,20 +52,22 @@
 }
 
 .github-head {
-  display: inline;
-  float: left;
-  width: 20px;
-  height: 20px;
+  display: inline-block;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 50px;
+  height: 50px;
 }
 
 .linkedin-head {
-  display: inline;
-  float: left;
-  width: 20px;
-  height: 20px;
+  display: inline-block;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 50px;
+  height: 50px;
 }
 
-.contentContainer {
+.content-container {
   padding-top: 40px;
   max-width: 700px;
   margin: auto;
